Fix ( by Dani) for api tool issues in PDE
Change-Id: I256494e10082665509858699e8c8075030a2b490
Signed-off-by: Vikas Chandra <Vikas.Chandra@in.ibm.com>